add desktop app for kira-bank
